fix(molecule): fixed data source select with `EventSubscriptionProcessor`.